# esp-radar

./: CMakeLists.txt  README.md  package-lock.json  package.json  sdkconfig  sdkconfig.old  version.txt
components/sensor-dsp/: CMakeLists.txt  README.md  RELEASE.md  component.yml  idf_component.yml
components/sensor-dsp/include/: float_types.h  ifx_sensor_dsp.h  matrix_types.h
components/sensor-dsp/source/: ifx_angle_dbf_f32.c  ifx_angle_monopulse_f32.c  ifx_arcsin_f32.c  ifx_cmplx_mean_removal_f32.c  ifx_doppler_cfft_f32.c  ifx_gen_steering_matrix_f32.c  ifx_mean_removal_f32.c  ifx_mti_f32.c  ifx_peak_search_f32.c  ifx_range_cfft_f32.c  ifx_range_fft_f32.c  ifx_window_blackman_f32.c  ifx_window_blackmanharris_f32.c  ifx_window_hamming_f32.c  ifx_window_hann_f32.c
components/sensor-xensiv-bgt60trxx/: CMakeLists.txt  README.md  RELEASE.md  component.yml  xensiv_bgt60trxx.c  xensiv_bgt60trxx_esp.c  xensiv_bgt60trxx_esp.h
components/xensiv-radar-presence/: CMakeLists.txt  README.md  RELEASE.md  component.yml  xensiv_radar_presence.h
main/: CMakeLists.txt  FreeRTOS_CLI.c  FreeRTOS_CLI.h  Kconfig.projbuild  cli_task.c  cli_task.h  main.c  radar_settings_tr13c.h  radar_settings_tr13c.json  radar_settings_utr11.h  radar_settings_utr11.json  resource_map.h
main/radar settings/: 1rx_1000hz.h  1rx_100hz.h  1rx_128_50hz.h
scripts/: 50.csv  output.csv  run_udp_server.py
